--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;900&family=Open+Sans&display=swap" rel="stylesheet"> 
-    
+    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/style.css">
     <title>Burger</title>
 </head>
@@ -18,7 +18,7 @@
                 <a href="#" class="header-logo"></a>
                 <nav>
                     <ul class="header-nav" >
-                        <li><a href="#">Главная</a></li>
+                        <li><a href="#" class="active">Главная</a></li>
                         <li><a href="#">Меню</a></li>
                         <li><a href="#">О нас</a></li>
                         <li><a href="#">Контакты</a></li>
