--- a/index.html
+++ b/index.html
@@ -29,5 +29,16 @@
         </div>
 
     </header>
+    <main>        
+        <div class="main">            
+            <div class="menu">
+                <p>Главная / Меню</p>
+                <h1>Наше Меню</h1>
+                <p></p>
+            </div>    
+            
+        </div>         
+        
+    </main>
 </body>
 </html>
