--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="menu">
                 <p>Главная / Меню</p>
                 <h1>Наше Меню</h1>
-                <p></p>
+                <p>Выбирай из предложенного ассортимента и мы доставим блюдо в течении часа</p>
             </div>    
             
         </div>         
