--- a/index.html
+++ b/index.html
@@ -64,39 +64,39 @@
             </div>
             <div class=" zamena items">
 
-                <ul>
+                <ul class="zamena hwo">
                     <li>
-                        <img src="/img/burgers_one.jpg" alt="">
+                        <img class="zavena--img-grid" src="img/burgers_one.jpg" alt="бургерочки">
+                    <p class="zamena--burgers-small">
+                        <span class="zamena-cize">$18</span>
+                        <a href="#">купить</a>
+                    </p> </li>
+                    <li>
+                        <img class="zavena--img-grid" src="/img/burgers_one.jpg" alt="">
                     <p class="zamena burgers-small">
                         <span class="zamena-cize">$18</span>
                         <a href="#">купить</a>
                     </p> </li>
                     <li>
-                        <img src="/img/burgers_one.jpg" alt="">
+                        <img class="zavena--img-grid" src="/img/burgers_one.jpg" alt="">
                     <p class="zamena burgers-small">
                         <span class="zamena-cize">$18</span>
                         <a href="#">купить</a>
                     </p> </li>
                     <li>
-                        <img src="/img/burgers_one.jpg" alt="">
+                        <img class="zavena--img-grid" src="/img/burgers_one.jpg" alt="">
                     <p class="zamena burgers-small">
                         <span class="zamena-cize">$18</span>
                         <a href="#">купить</a>
                     </p> </li>
                     <li>
-                        <img src="/img/burgers_one.jpg" alt="">
+                        <img class="zavena--img-grid" src="/img/burgers_one.jpg" alt="">
                     <p class="zamena burgers-small">
                         <span class="zamena-cize">$18</span>
                         <a href="#">купить</a>
                     </p> </li>
                     <li>
-                        <img src="/img/burgers_one.jpg" alt="">
-                    <p class="zamena burgers-small">
-                        <span class="zamena-cize">$18</span>
-                        <a href="#">купить</a>
-                    </p> </li>
-                    <li>
-                        <img src="/img/burgers_one.jpg" alt="">
+                        <img class="zavena--img-grid" src="/img/burgers_one.jpg" alt="">
                     <p class="zamena burgers-small">
                         <span class="zamena-cize">$18</span>
                         <a href="#">купить</a>
