--- a/index.html
+++ b/index.html
@@ -48,13 +48,15 @@
     <main>
         <div class="banner">
             <div class="container">
-                <div class="banner-box main-bg">
-                    <h2 class="banner-title cost1">
-                        <span class="sale">скидка</span>
-                        -30%
-                    </h2>
-                    <p class="banner-text description">Только при покупке 3-х и более позиций, мы дарим скидку. Акции не суммируются.</p>
-                    <a href="#" class="banner-link main-button">купить сейчас </a>
+                <div class="banner-box">
+                    <div class="banner-inbox">                        
+                        <h2 class="banner-title">
+                            <span class="sale">скидка</span>
+                            -30%
+                        </h2>
+                        <p class="banner-text">Только при покупке 3-х и более позиций, мы дарим скидку. Акции не суммируются.</p>
+                        <a href="#" class="banner-link main-button">купить сейчас </a>
+                    </div>
                 <div>
             </div>
         </div>   
