--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <img class="menu-grid-img" src="img/menu/01.jpg" alt="Острый бургер">
                     </div>    
                     <p class="menu-grid-title">Острый бургер</p>
-                    <p class="menu-grid-price">$18</p>
+                    <p class="menu-grid-price">$26</p>
                     <button type="button" class="menu-grid-btn" href="#">
                         <span class="menu-grid-icon"></span>
                         <span class="menu-grid-text">купить</span>
@@ -146,8 +146,45 @@
                 </div>
             </div>                
         </section>
-        <section>
-            <div class="ololo"></div>
+        <!-- ==== <section2> =========================================-->
+        <section class="additionally">
+            <h2 class="menu-title">дополнительно</h2> 
+            <div class="menu-grid">
+                <div class="menu-grid-item">
+                    <div class="menu-grid-cover">
+                        <img class="menu-grid-img" src="img/menu/dop01.jpg" alt="Острый бургер">
+                    </div>    
+                    <p class="menu-grid-title">Сэндвич</p>
+                    <p class="menu-grid-price">$3</p>
+                    <button type="button" class="menu-grid-btn" href="#">
+                        <span class="menu-grid-icon"></span>
+                        <span class="menu-grid-text">купить</span>
+                    </button>                    
+                </div>
+                <!-- 2 -->
+                <div class="menu-grid-item">
+                    <div class="menu-grid-cover">
+                        <img class="menu-grid-img" src="img/menu/dop02.jpg" alt="острый бургер">
+                    </div>    
+                    <p class="menu-grid-title">Картошка Фри</p>
+                    <p class="menu-grid-price">$5</p>
+                    <button type="button" class="menu-grid-btn" href="#">
+                        <span class="menu-grid-icon"></span>
+                        <span class="menu-grid-text">купить</span>
+                    </button>                    
+                </div>
+                <!-- 3 -->
+                <div class="menu-grid-item">
+                    <div class="menu-grid-cover">
+                        <img class="menu-grid-img" src="img/menu/dop03.jpg" alt="острый бургер">
+                    </div>    
+                    <p class="menu-grid-title">Хот-Дог</p>
+                    <p class="menu-grid-price">$7</p>
+                    <button type="button" class="menu-grid-btn" href="#">
+                        <span class="menu-grid-icon"></span>
+                        <span class="menu-grid-text">купить</span>
+                    </button>                    
+                </div>
         </section>
     </main>
     <div class="footer">
