--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;900&family=Open+Sans&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="shortcut icon" href="img/Logo_light2.svg" type="image/x-icon">
     <title>Burger</title>
 </head>
 <body>
@@ -18,8 +19,8 @@
                 <a href="#" class="header-logo"></a>
                 <nav>
                     <ul class="header-nav" >
-                        <li><a href="#" class="active">Главная</a></li>
-                        <li><a href="#">Меню</a></li>
+                        <li><a href="#">Главная</a></li>
+                        <li><a href="#" class="active">Меню</a></li>
                         <li><a href="#">О нас</a></li>
                         <li><a href="#">Контакты</a></li>
                     </ul>
@@ -90,7 +91,7 @@
                         <img class="menu-grid-img" src="img/menu/02.jpg" alt="острый бургер">
                     </div>    
                     <p class="menu-grid-title">Гриль Бургер</p>
-                    <p class="menu-grid-price">$26</p>
+                    <p class="menu-grid-price">$18</p>
                     <button type="button" class="menu-grid-btn" href="#">
                         <span class="menu-grid-icon"></span>
                         <span class="menu-grid-text">купить</span>
@@ -187,23 +188,23 @@
                 </div>
         </section>
     </main>
-    <div class="footer">
+    <footer class="footer">
         <div class="container2">
-            <div class="item">
-                <img class="logo" src="img/Logo_light2.svg" alt="Logo">
+            <div class="footer-item">
+                <img class="footer-logo" src="img/Logo_light2.svg" alt="Logo">
             </div>
-            <div class="item">
+            <div class="footer-item">
                 <h2>основные ссылки</h2>
-                <ul>
+                <ul class="footer-list">
                     <li><a href="#">Меню</a></li>
                     <li><a href="#">Заказ и Доставка</a></li>
                     <li><a href="#">Методы оплаты</a></li>
                     <li><a href="#">Контакты</a></li>
                 </ul>
             </div>
-            <div class="item">
+            <div class="footer-item">
                 <h2>основная информация</h2>
-                <ul>
+                <ul class="footer-list">
                     <li>
                         <span>время</span>
                         ПН - ВС <br>
@@ -211,18 +212,18 @@
                     </li>
                     <li>
                         <span>Адрес</span>
-                        Москва, ул. Тверская, 5, вход со двора     
+                        Москва, ул. Тверская, 5     
                     </li>
                     
                 </ul>
             </div>
-            <div class="tel">
-                <ul>
+            <div class="footer-tel"> 
+                <ul class="footer-list">
                     <li>+ 7 900 787 13-13</li>
                     <li>+ 7 900 700 14-14</li>
                 </ul>
             </div>
         </div>
-    </div>
+    </footer>
 </body>
 </html>
