--- a/index.html
+++ b/index.html
@@ -225,5 +225,7 @@
             </div>
         </div>
     </footer>
+    <!-- https://github.com/keaasd/Modul_01.git
+    kea-asd@yandex.ru -->
 </body>
 </html>
