--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;900&family=Open+Sans&display=swap" rel="stylesheet"> 
+    <script defer src="js/up.js"></script>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="shortcut icon" href="img/Logo_light2.svg" type="image/x-icon">
@@ -20,9 +21,9 @@
                 <nav>
                     <ul class="header-nav" >
                         <li><a href="#">Главная</a></li>
-                        <li><a href="#" class="active">Меню</a></li>
-                        <li><a href="#">О нас</a></li>
-                        <li><a href="#">Контакты</a></li>
+                        <li><a href="#menu" class="active">Меню</a></li>
+                        <li><a href="#footer">О нас</a></li>
+                        <li><a href="#footer-list">Контакты</a></li>
                     </ul>
                 </nav>
                 <button type="button" class="button">
@@ -62,7 +63,7 @@
             </div>
         </div>
         <!-- === <section class="menu"> ========================= -->
-        <section class="menu">   
+        <section id="menu" class="menu">   
             <div class="container">
                 <div class="menu-header">
                     <h2 class="menu-title">бургеры</h2>  
@@ -188,7 +189,7 @@
                 </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer id="footer" class="footer">
         <div class="container2">
             <div class="footer-item">
                 <img class="footer-logo" src="img/Logo_light2.svg" alt="Logo">
@@ -218,14 +219,15 @@
                 </ul>
             </div>
             <div class="footer-tel"> 
-                <ul class="footer-list">
+                <ul id="footer-list" class="footer-list">
                     <li>+ 7 900 787 13-13</li>
                     <li>+ 7 900 700 14-14</li>
                 </ul>
             </div>
         </div>
     </footer>
-    <!-- https://github.com/keaasd/Modul_01.git
+    <a class="back_to_top" title="Наверх">↑</a>
+    <!-- https://github.com/keaasd/Module01-Burger.git
     kea-asd@yandex.ru -->
 </body>
 </html>
