--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;900&family=Open+Sans&display=swap" rel="stylesheet"> 
     <script defer src="js/up.js"></script>
+    <script defer src="js/bee.js"></script>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="shortcut icon" href="img/Logo_light2.svg" type="image/x-icon">
@@ -15,6 +16,11 @@
 </head>
 <body>
     <header>
+        <!-- тут летает пчела -->
+        <div id="bee" class="container"> 
+            <img src="img/aann.png" title="Freepik" alt="https://www.flaticon.com/ru/" width="60px">
+        </div>
+        <!-- тут улетает пчела -->
         <div class="container">
             <div class="header">
                 <a href="#" class="header-logo"></a>
@@ -227,6 +233,7 @@
         </div>
     </footer>
     <a class="back_to_top" title="Наверх">↑</a>
+    
     <!-- https://github.com/keaasd/Module01-Burger.git
     kea-asd@yandex.ru -->
 </body>
