--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <li><a href="#footer-list">Контакты</a></li>
                     </ul>
                 </nav>
-                <button type="button" class="button">
+                <button type="button" href="#" class="button">
                     <span class="button-item">
                         <img src="img/cart.svg" alt="корзина">
                         <span class="button-count">44</span>
