fork footer 320px

--- a/menu.html
+++ b/menu.html
@@ -60,7 +60,7 @@
                 <li><a href="#">Меню</a> </li>
             </ul>
             <h1 class="title">Наше Меню</h1>
-            <p class="description">Выбирай из предложенного ассортимента и мы доставим блюдо в течении часа</p>            
+            <p class="description">Выбирай из предложенного ассортимента и мы доставим блюдо в&nbsp;течении часа</p>            
         </div>    
     </div>
     <main>
