--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
         </div>
     </footer>
-    <a class="back_to_top" title="Наверх">↑</a>
+    <a class="back_to_top" title="Наверх">Наверх</a>
 <!-- привет мир! -->
 </body>
 </html>
