--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
-    <script defer src="js/up.js"></script>
+    <script defer src="js/main.js"></script>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="android-chrome-icon" sizes="32x32" href="img/favicon/favicon.ico">
@@ -98,7 +98,6 @@
             </div>
         </div>
     </footer>
-    <a class="back_to_top" title="Наверх">Наверх</a>
-<!-- привет мир! -->
+    <a href="#headerTop" class="button-up hidden" id="btnUp">Наверх</a>
 </body>
 </html>
