--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
-    <script defer src="js/main.js"></script>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="android-chrome-icon" sizes="32x32" href="img/favicon/favicon.ico">
@@ -27,7 +26,7 @@
     
 </head>
 <body>
-    <div class="main2"> 
+    <div class="main2" id="headerTop"> 
         <div class="wrap">                
             <div class="contents">                
                     <h1 class="content-title">
