btn up js defer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;900&family=Open+Sans&display=swap" rel="stylesheet"> 
-    
+    <script defer src="js/main.js"></script>
 </head>
 <body>
     <div class="main2" id="headerTop"> 
@@ -98,33 +98,6 @@
         </div>
     </footer>
     <a href="#headerTop" class="button-up hidden" id="btnUp">Наверх</a>
-    <script>        
-// Button Up
-
-    window.onscroll = function(){scrollFunction()};
-
-const upbuttons = document.querySelectorAll(".button-up");
-
-for (const upbutton of upbuttons) {
-    upbutton.addEventListener("click", clickHandler);
-}
-
-function clickHandler(e) {
-    e.preventDefault();
-    const href = this.getAttribute("href");
-
-document.querySelector(href).scrollIntoView({
-    behavior: "smooth"
-});
-}
-
-function scrollFunction(){
-    if ( document.body.scrollTop > 1000 || document.documentElement.scrollTop > 1000){
-        document.getElementById('btnUp').className = 'button-up visible';
-    } else {
-        document.getElementById('btnUp').className = 'button-up hidden';
-    }
-}
-    </script>
+    
 </body>
 </html>
