--- a/menu.html
+++ b/menu.html
@@ -52,7 +52,7 @@
                         <img src="img/cart.svg" alt="корзина">
                         <span class="button-count">5</span>
                     </span>
-                    <span class="button-text">$125</span>
+                    <span class="button-text">0 руб</span>
                 </button>
             </div>
         </div>
@@ -100,7 +100,7 @@
                             <img class="menu-grid-img" src="img/menu/01.jpg" alt="Острый бургер">
                         </div>
                         <p class="menu-grid-title">Острый бургер</p>
-                        <p class="menu-grid-price">$26</p>
+                        <p class="menu-grid-price">26 руб</p>
                         <button type="button" class="menu-grid-btn">
                             <span class="menu-grid-icon"></span>
                             <span class="menu-grid-text">купить</span>
@@ -112,7 +112,7 @@
                             <img class="menu-grid-img" src="img/menu/02.jpg" alt="острый бургер">
                         </div>
                         <p class="menu-grid-title">Гриль Бургер</p>
-                        <p class="menu-grid-price">$16</p>
+                        <p class="menu-grid-price">16 руб</p>
                         <button type="button" class="menu-grid-btn">
                             <span class="menu-grid-icon"></span>
                             <span class="menu-grid-text">купить</span>
@@ -124,7 +124,7 @@
                             <img class="menu-grid-img" src="img/menu/03.jpg" alt="острый бургер">
                         </div>
                         <p class="menu-grid-title">Бурег Гигант</p>
-                        <p class="menu-grid-price">$37</p>
+                        <p class="menu-grid-price">37 руб</p>
                         <button type="button" class="menu-grid-btn">
                             <span class="menu-grid-icon"></span>
                             <span class="menu-grid-text">купить</span>
@@ -136,7 +136,7 @@
                             <img class="menu-grid-img" src="img/menu/04.jpg" alt="острый бургер">
                         </div>
                         <p class="menu-grid-title">Бургер с курицей</p>
-                        <p class="menu-grid-price">$18</p>
+                        <p class="menu-grid-price">18 руб</p>
                         <button type="button" class="menu-grid-btn">
                             <span class="menu-grid-icon"></span>
                             <span class="menu-grid-text">купить</span>
@@ -148,7 +148,7 @@
                             <img class="menu-grid-img" src="img/menu/05.jpg" alt="острый бургер">
                         </div>
                         <p class="menu-grid-title">Бургер с курицей</p>
-                        <p class="menu-grid-price">$9</p>
+                        <p class="menu-grid-price">9 руб</p>
                         <button type="button" class="menu-grid-btn">
                             <span class="menu-grid-icon"></span>
                             <span class="menu-grid-text">купить</span>
@@ -160,7 +160,7 @@
                             <img class="menu-grid-img" src="img/menu/06.jpg" alt="острый бургер">
                         </div>
                         <p class="menu-grid-title">Тройной бургер</p>
-                        <p class="menu-grid-price">$7</p>
+                        <p class="menu-grid-price">7 руб</p>
                         <button type="button" class="menu-grid-btn">
                             <span class="menu-grid-icon"></span>
                             <span class="menu-grid-text">купить</span>
@@ -179,7 +179,7 @@
                             <img class="menu-grid-img" src="img/menu/dop01.jpg" alt="Острый бургер">
                         </div>
                         <p class="menu-grid-title">Сэндвич</p>
-                        <p class="menu-grid-price">$3</p>
+                        <p class="menu-grid-price">3 руб</p>
                         <button type="button" class="menu-grid-btn">
                             <span class="menu-grid-icon"></span>
                             <span class="menu-grid-text">купить</span>
@@ -191,7 +191,7 @@
                             <img class="menu-grid-img" src="img/menu/dop02.jpg" alt="острый бургер">
                         </div>
                         <p class="menu-grid-title">Картошка Фри</p>
-                        <p class="menu-grid-price">$5</p>
+                        <p class="menu-grid-price">5 руб</p>
                         <button type="button" class="menu-grid-btn">
                             <span class="menu-grid-icon"></span>
                             <span class="menu-grid-text">купить</span>
@@ -203,7 +203,7 @@
                             <img class="menu-grid-img" src="img/menu/dop03.jpg" alt="острый бургер">
                         </div>
                         <p class="menu-grid-title">Хот-Дог</p>
-                        <p class="menu-grid-price">$7</p>
+                        <p class="menu-grid-price">7 руб</p>
                         <button type="button" class="menu-grid-btn">
                             <span class="menu-grid-icon"></span>
                             <span class="menu-grid-text">купить</span>
@@ -279,7 +279,7 @@
                     <div class="modal-callback__title">Корзина</div>
                     <div class="modal-callback__text cart-wrapper">
                         <div class="cart-total">
-                            Общая сумма: <span>0</span> руб
+                            Общая сумма: <span>0</span>  руб
                         </div>
                         <div id="cart-empty">
                             Ваша корзина пока пуста
